bug fixing: timer overlap issue, transition button binding, include some css...

--- a/main.css
+++ b/main.css
@@ -7,3 +7,6 @@
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
   }
+  /* .container{
+      margin: 
+  } */
